src/test/ui/issue-48838.stderr
error[E0308]: mismatched types
  --> $DIR/issue-48838.rs:12:14
   |
LL |     Square = |x| x, //~ ERROR mismatched types
   |              ^^^^^ expected isize, found closure
   |
   = note: expected type `isize`
              found type `[closure@$DIR/issue-48838.rs:12:14: 12:19]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
